# ylog

./: CMakeLists.txt  CMakePresets.json
cmake/toolchain/: clang-toolchain.cmake
example/: CMakeLists.txt  demo.cpp
src/: CMakeLists.txt  level.cppm  logger.cppm  message.cppm  registry.cppm  ylog.cppm
src/sinks/: sink.cppm  sink_file.cppm  sink_stdout.cppm
test/: CMakeLists.txt  unit_test.cpp
